--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,5 +1,31 @@
 <p><a routerLink="/admin/product/new" class="btn btn-primary">New Product</a></p>
-<table class="table">
+<ng-table [rows]="products" [columns]="columns"></ng-table>
+<pagination *ngIf="config.paging"
+            class="pagination-sm"
+            [(ngModel)]="page"
+           >
+</pagination>
+<!-- <p>
+    <input #query (keyup)="filter(query.value)" type="text" placeholder="Search..." class="form-control">
+</p> -->
+<!-- <data-table [items]="items" [itemCount]="itemCount" (reload)="reloadItems($event)">
+    <data-table-column [property]="'title'" [header]="'Title'" [sortable]="true" [resizable]="true">
+        <ng-template #dataTableCell let-item="product">
+            {{item.title}}
+        </ng-template>
+    </data-table-column>
+    <data-table-column [property]="'price'" [header]="'Price'" [sortable]="true" [resizable]="true">
+        <ng-template #dataTableCell let-item="product">
+            {{item.price | currency:'USD':true}}
+        </ng-template>
+    </data-table-column>
+    <data-table-column [property]="'$key'">
+        <ng-template #dataTableCell let-item="product">
+            <a [routerLink]="['/admin/products/'+item.key]">Edit</a>
+        </ng-template>
+    </data-table-column>
+</data-table> -->
+<!-- <table class="table">
     <thead>
         <tr>
             <th>Title</th>
@@ -16,4 +42,4 @@
             </td>
         </tr>
     </tbody>
-</table>
+</table>  -->
