--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,6 +1,5 @@
 <div class="row">
     <div class="col-md-6">
-
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for="title">Title</label>
@@ -39,6 +38,7 @@
                 </div>
             </div>          
             <button class="btn btn-primary">Save</button>
+            <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
         </form>
     </div>
     <div class="col-md-6">
