--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -11,7 +11,6 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of cart.items">
-
                 <td> {{ item.title }}</td>
                 <td><product-quantity [product]="item" [shopping-cart]="cart"></product-quantity></td>
                 <td>{{item.totalPrice | currency:'USD':true}}</td>
@@ -25,4 +24,5 @@
             </tr>
         </tfoot>
     </table>
+    <button (click)="clearCart()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
 </ng-container>
