--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,28 +1,32 @@
 <h1>Shopping Cart</h1>
-<ng-container *ngIf="cart$ |async as cart">
+<div class="row col-10" *ngIf="cart$ |async as cart">
     <p>You have {{cart.totalItemsCount}} items in your shopping cart.</p>
     <table class="table">
         <thead>
             <tr>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Price</th>
+                <th></th>
+                <th class="text-start" style="width:200px">Product</th>
+                <th class="text-center" style="width:240px">Quantity</th>
+                <th class="text-end" style="width:240px">Price</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of cart.items">
+               <td>
+                <div [style.backgroundImage]="'url('+item.imageUrl+')'" class="thumbnail"></div></td> 
                 <td> {{ item.title }}</td>
                 <td><product-quantity [product]="item" [shopping-cart]="cart"></product-quantity></td>
-                <td>{{item.totalPrice | currency:'USD':true}}</td>
+                <td class="text-end">{{item.totalPrice | currency:'USD':true}}</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
                 <th></th>
                 <th></th>
-                <th>{{cart.totalPrice| currency:'USD':true}}</th>
+                <th></th>
+                <th class="text-end">{{cart.totalPrice| currency:'USD':true}}</th>
             </tr>
         </tfoot>
     </table>
     <button (click)="clearCart()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
-</ng-container>
+</div>
