--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,8 @@
 <h1>Shopping Cart</h1>
 <div class="row col-10" *ngIf="cart$ |async as cart">
-    <p>You have {{cart.totalItemsCount}} items in your shopping cart.</p>
+    <p>You have {{cart.totalItemsCount}} items in your shopping cart.
+        <button (click)="clearCart()" class="btn btn-light btn-sm">Clear Shopping Cart</button>
+    </p>
     <table class="table">
         <thead>
             <tr>
@@ -28,5 +30,8 @@
             </tr>
         </tfoot>
     </table>
-    <button (click)="clearCart()" class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+    <div class="d-grid gap-2 d-md-block">
+        <a *ngIf="cart.items.length" routerLink="/check-out" class="btn btn-primary btn-sm">Check Out</a> &nbsp;
+       
+    </div>    
 </div>
